Creacion de nuevos componentes
Se crean los componentes: navbar, personajes, search, tarjeta

Se ajusta el sistema de rutas

Se integra animate.css

Se crea nuevo .scss para navbar

Se ajusta estructura visual para comenzar rendering de componentes

--- a/angular.json
+++ b/angular.json
@@ -25,7 +25,8 @@
             ],
             "styles": [
               "src/styles.css",
-              "src/assets/css/myStyle.css"
+              "src/assets/css/myStyle.css",
+              "src/assets/css/animate.css"
             ],
             "scripts": []
           },
