--- a/angular.json
+++ b/angular.json
@@ -3,7 +3,7 @@
   "version": 1,
   "newProjectRoot": "projects",
   "projects": {
-    "pruebaKeyrus": {
+    "MyStarWars": {
       "projectType": "application",
       "schematics": {},
       "root": "",
@@ -13,7 +13,7 @@
         "build": {
           "builder": "@angular-devkit/build-angular:browser",
           "options": {
-            "outputPath": "dist/pruebaKeyrus",
+            "outputPath": "dist/MyStarWars",
             "index": "src/index.html",
             "main": "src/main.ts",
             "polyfills": "src/polyfills.ts",
@@ -65,18 +65,18 @@
         "serve": {
           "builder": "@angular-devkit/build-angular:dev-server",
           "options": {
-            "browserTarget": "pruebaKeyrus:build"
+            "browserTarget": "MyStarWars:build"
           },
           "configurations": {
             "production": {
-              "browserTarget": "pruebaKeyrus:build:production"
+              "browserTarget": "MyStarWars:build:production"
             }
           }
         },
         "extract-i18n": {
           "builder": "@angular-devkit/build-angular:extract-i18n",
           "options": {
-            "browserTarget": "pruebaKeyrus:build"
+            "browserTarget": "MyStarWars:build"
           }
         },
         "test": {
@@ -113,15 +113,15 @@
           "builder": "@angular-devkit/build-angular:protractor",
           "options": {
             "protractorConfig": "e2e/protractor.conf.js",
-            "devServerTarget": "pruebaKeyrus:serve"
+            "devServerTarget": "MyStarWars:serve"
           },
           "configurations": {
             "production": {
-              "devServerTarget": "pruebaKeyrus:serve:production"
+              "devServerTarget": "MyStarWars:serve:production"
             }
           }
         }
       }
     }},
-  "defaultProject": "pruebaKeyrus"
+  "defaultProject": "MyStarWars"
 }
